--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 .left {
     flex: 1;
-    background: url('imagens/background2.png') center/cover no-repeat;
+    background: url('../imagens/background2.png') center/cover no-repeat;
 }
 .right {
     flex: 1;
